--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -79,16 +79,38 @@ mark {
   font-weight: bolder;
 }
 
-.showcase-description {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-weight: bolder;
+.text-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  margin-bottom: 60px;
 
-  :first-child {
-    border-top: 5px solid white;
-    width: 130px;
+  .showcase-main {
+    display: block;
+    font-size: 2em;
   }
+
+  .showcase-sub {
+    display: block;
+  }
+
+  .showcase-location {
+    position: absolute;
+    bottom: -30vh;
+    transform: translate(-50%, -50%);
+    border-top: 5px solid white;
+    padding-top: 5px;
+  }
+}
+
+
+.showcase-description {
+  position: relative;
+  font-weight: bolder;
+  text-align: center;
 }
 
 #showcase {
