--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -11,6 +11,10 @@ section .jumbotron {
   margin-bottom: 1vh;
 }
 
+.modal-backdrop {
+  z-index: -1;
+}
+
 footer a,
 footer a:hover {
   text-decoration: none;
@@ -30,37 +34,52 @@ mark {
   color: white;
 }
 
-.tint {
-  position: relative;
-  z-index: 1;
-  top: 8vh;
+.fixed-navbar {
+  position: absolute;
+  padding: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 2;
+  height: auto;
 }
 
-.tint a {
-  color: white;
-  font-weight: bolder;
-  background: rgba(0, 0, 0, 0.3);
+.fixed-navbar .logo {
+  height: 100px;
 }
 
-.desktop-logo {
-  height: 70px;
-  width: auto;
-}
-
-.topbar-search {
-  margin-top: 5px;
-  height: 28px;
-  font-size: 11pt;
-}
-
-.current-page {
-  padding-bottom: 0;
-  border-bottom: 2px solid #477F2D;
+.header-image-offset {
+  height: 100vh;
+  width: 100vw;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 0;
+     object-position: 0 0;
 }
 
 .header-image {
+  height: 100vh;
+  width: 100vw;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.text-overlay {
+  padding: 1em;
+  position: absolute;
+  z-index: 4;
+  bottom: 0;
+  text-align: center;
+  width: 100vw;
+  color: white;
+}
+
+.text-overlay h1 {
+  margin-top: 0;
+}
+
+.text-overlay strong {
+  text-decoration: underline;
 }
 
 .jumbotron-text {
@@ -228,34 +247,6 @@ mark {
   margin: 0;
 }
 
-.text-overlay {
-  padding: 1em;
-  position: absolute;
-  height: 80vh;
-  width: 40vw;
-  right: 0;
-  z-index: 1;
-  color: white;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.text-overlay h1 {
-  margin-top: 20vh;
-}
-
-.text-overlay hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 3px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
-}
-
-.text-overlay strong {
-  text-decoration: underline;
-}
-
 .remove-list-style {
   list-style: none;
   font-weight: bolder;
@@ -276,18 +267,5 @@ mark {
 
 section iframe {
   margin: 15px 0;
-}
-
-@media screen and (min-width: 1920px) {
-  .header-image {
-    height: 1080px;
-  }
-}
-
-@media (min-width: 1200px) and (max-width: 1368px) {
-  .header-image {
-    width: 100%;
-    height: 74vh;
-  }
 }
 /*# sourceMappingURL=main.css.map */
