--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,5 @@
 $crete: #477F2D;
+// $crete: rgba(71, 127, 45, 0.856);
 
 // body {
 //   font-family: 'IBM Plex Sans', sans-serif;
@@ -20,7 +21,7 @@ section {
 }
 
 .modal-backdrop {
-  z-index: -1;
+  z-index: 0;
 }
 
 footer {
@@ -47,14 +48,37 @@ mark {
 
 
 .fixed-navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   position: absolute;
   padding: 20px 0;
-  display: flex;
   z-index: 2;
-  height: auto;
 
   .logo {
     height: 100px;
+  }
+
+  .logo-name {
+    color: white;
+    text-shadow: grey 1px 1px;
+    font-size: 21pt;
+    width: 200px;
+    margin-left: 10px;
+    line-height: 1;
+  }
+
+  .navbar-link {
+    font-weight: bolder;
+    text-shadow: grey 1px 1px;
+    text-decoration: none;
+    color: white;
+    margin: 0 1vw;
+    border: none;
+  }
+
+  .navbar-link:hover {
+    background: $crete;
   }
 }
 
@@ -79,7 +103,7 @@ mark {
   text-align: center;
   width: 100vw;
   color: white;
-  // background: linear-gradient(to top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
 
   h1 {
     margin-top: 0;
@@ -253,6 +277,18 @@ mark {
   }
 }
 
+.btn-info {
+  background: white;
+  color: $crete;
+  border: none;
+  font-weight: bolder;
+
+}
+
+.btn-info:hover {
+  background: white;
+  color: $crete;
+}
 
 .remove-list-style {
   list-style: none;
@@ -274,4 +310,27 @@ mark {
 
 section iframe {
   margin: 15px 0;
+}
+
+.three-links {
+  background: $crete;
+
+  .flex-links {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  a {
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
+    font-size: 18pt;
+    padding: 10px;
+    text-transform: uppercase;
+  }
+}
+
+.btn-outline-secondary:hover {
+  background: $crete;
+  border-color: $crete;
 }
