--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -54,7 +54,6 @@ mark {
 
 .fixed-navbar .logo-name {
   color: white;
-  text-shadow: grey 1px 1px;
   font-size: 21pt;
   width: 200px;
   margin-left: 10px;
@@ -63,7 +62,6 @@ mark {
 
 .fixed-navbar .navbar-link {
   font-weight: bolder;
-  text-shadow: grey 1px 1px;
   text-decoration: none;
   color: white;
   margin: 0 1vw;
@@ -72,6 +70,14 @@ mark {
 
 .fixed-navbar .navbar-link:hover {
   background: #477F2D;
+}
+
+.tint {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .header-image-offset {
@@ -93,13 +99,10 @@ mark {
 .text-overlay {
   padding: 1em;
   position: absolute;
-  z-index: 4;
+  z-index: 1;
   bottom: 0;
   text-align: center;
-  width: 100vw;
   color: white;
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.65)), to(rgba(0, 0, 0, 0)));
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
 .text-overlay h1 {
@@ -333,5 +336,9 @@ section iframe {
 .btn-outline-secondary:hover {
   background: #477F2D;
   border-color: #477F2D;
+}
+
+.z-index-4 {
+  z-index: 4;
 }
 /*# sourceMappingURL=main.css.map */
