--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -84,11 +84,39 @@ footer {
   font-weight: bolder;
   cursor: default;
 }
+
 .current-page:hover,
 .current-page:active,
 .current-page:focus {
   text-decoration: none;
   color: white;
+}
+
+.subpage-tint {
+  position: absolute;
+  height: 60vh;
+  width: 100%;
+  z-index: 1;
+  background: rgba(0,0,0,0.2);
+}
+
+.sub-header-image {
+  position: relative;
+  img {
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
+  }
+  .sub-header-location {
+    position: absolute;
+    bottom:0;
+    padding: 5px;
+    margin-bottom: 1vh;
+    font-weight: bolder;
+    color: white;
+    border-bottom: 5px solid white;
+    z-index: 1;
+  }
 }
 
 .btn-info {
