--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -83,6 +83,36 @@ footer a:hover {
   color: white;
 }
 
+.subpage-tint {
+  position: absolute;
+  height: 60vh;
+  width: 100%;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.sub-header-image {
+  position: relative;
+}
+
+.sub-header-image img {
+  width: 100%;
+  height: 60vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.sub-header-image .sub-header-location {
+  position: absolute;
+  bottom: 0;
+  padding: 5px;
+  margin-bottom: 1vh;
+  font-weight: bolder;
+  color: white;
+  border-bottom: 5px solid white;
+  z-index: 1;
+}
+
 .btn-info {
   background: white;
   color: #477F2D;
