--- a/assets/css/our-school.css
+++ b/assets/css/our-school.css
@@ -1,1 +1,8 @@
-/* No CSS *//*# sourceMappingURL=our-school.css.map */
+.carousel-img {
+  display: inline-block;
+}
+
+.welcome {
+  display: inline;
+}
+/*# sourceMappingURL=our-school.css.map */
