--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -97,24 +97,27 @@ footer {
   height: 60vh;
   width: 100%;
   z-index: 1;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .sub-header-image {
   position: relative;
+
   img {
     width: 100%;
     height: 60vh;
     object-fit: cover;
   }
+
   .sub-header-location {
     position: absolute;
-    bottom:0;
-    padding: 5px;
-    margin-bottom: 1vh;
+    bottom: 0;
+    // left: 50%;
+    // transform: translate(-50%, 0);
+    margin-bottom: 10px;
     font-weight: bolder;
     color: white;
-    border-bottom: 5px solid white;
+    border-top: 5px solid white;
     z-index: 1;
   }
 }
