--- a/assets/scss/our-school.scss
+++ b/assets/scss/our-school.scss
@@ -25,6 +25,10 @@ $crete: #477F2D;
 // }
 section {
   line-height: 200%;
+  h4 {
+    margin-top: 5vh;
+    margin-bottom:0;
+  }
 }
 .carousel-img {
   width: 40vw;
@@ -35,4 +39,10 @@ section {
 .tooltip-text {
   border-bottom: 1px dotted grey;
   cursor: help;
+}
+
+.blockquote {
+  border-left: 5px solid $crete;
+  padding-left: 5px;
+  max-width: 80%
 }
