--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -11,37 +11,48 @@ mark {
   background: rgba(0, 0, 0, 0.2);
 }
 
-.header-image-offset {
-  height: 100vh;
-  width: 100vw;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: 0 0;
-     object-position: 0 0;
-}
-
-.header-image {
-  height: 100vh;
-  width: 100vw;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 .text-overlay {
   padding: 1em;
   position: absolute;
   z-index: 1;
-  bottom: 0;
+  top: 20vh;
   text-align: center;
   color: white;
 }
 
-.text-overlay h1 {
-  margin-top: 0;
+.text-overlay #call-to-action {
+  font-size: 10vw;
+  text-transform: uppercase;
+  font-weight: bolder;
+  opacity: 0.6;
+  z-index: 1;
 }
 
 .text-overlay strong {
   text-decoration: underline;
+}
+
+.overflow-hidden {
+  height: 100vh;
+  overflow: hidden;
+  display: relative;
+}
+
+.pattern-overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  bottom: 0;
+  background-image: url("../../img/video-pattern-overlay.png");
+}
+
+#homepage-video {
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  left: 0;
+  top: 0;
 }
 
 .jumbotron-text {
@@ -93,10 +104,12 @@ mark {
 }
 
 #showcase img {
-  max-height: 75vh;
+  height: 75vh;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: 0 75%;
+     object-position: 0 75%;
 }
 
 .card-grid {
