--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -18,35 +18,61 @@ mark {
   background: rgba(0,0,0,0.2);
 }
 
-.header-image-offset {
-  height: 100vh;
-  width: 100vw;
-  object-fit: cover;
-  object-position: 0 0;
-}
+// .header-image-offset {
+//   height: 100vh;
+//   width: 100vw;
+//   object-fit: cover;
+//   object-position: 0 0;
+// }
 
-.header-image {
-  height: 100vh;
-  width: 100vw;
-  object-fit: cover;
-}
+// .header-image {
+//   height: 100vh;
+//   width: 100vw;
+//   object-fit: cover;
+// }
 
 .text-overlay {
   padding: 1em;
   position: absolute;
   z-index: 1;
-  bottom: 0;
+  top: 20vh;
   text-align: center;
   color: white;
   // background: linear-gradient(to top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
 
-  h1 {
-    margin-top: 0;
+  #call-to-action {
+    font-size: 10vw;
+    text-transform: uppercase;
+    font-weight: bolder;
+    opacity: 0.6;
+    z-index: 1;
   }
 
   strong {
     text-decoration: underline;
   }
+}
+
+.overflow-hidden {
+  height: 100vh;
+  overflow: hidden;
+  display:relative;
+}
+
+.pattern-overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  bottom: 0;
+  background-image: url("../../img/video-pattern-overlay.png");
+}
+
+#homepage-video {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  left:0;
+  top: 0;
 }
 
 .jumbotron-text {
@@ -82,7 +108,6 @@ mark {
   }
 }
 
-
 .showcase-description {
   position: relative;
   font-weight: bolder;
@@ -100,9 +125,10 @@ mark {
   }
 
   img {
-    max-height: 75vh;
+    height: 75vh;
     width: 100%;
     object-fit: cover;
+    object-position: 0 75%;
   }
 }
 
