--- a/assets/scss/our-school.scss
+++ b/assets/scss/our-school.scss
@@ -29,6 +29,9 @@ section {
     margin-top: 5vh;
     margin-bottom:0;
   }
+  h1, h2, h4 {
+    color: $crete;
+  }
 }
 .carousel-img {
   width: 40vw;
