--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -64,7 +64,7 @@ mark {
   top: 0;
   width: 100%;
   bottom: 0;
-  background-image: url("../../img/video-pattern-overlay.png");
+  // background-image: url("../../img/video-pattern-overlay.png");
 }
 
 #homepage-video {
