--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -82,7 +82,7 @@ footer {
   text-align: center;
   padding-top: 5px;
   font-weight: bolder;
-  cursor: default;
+  // cursor: default;
 }
 
 .current-page:hover,
@@ -150,6 +150,19 @@ footer {
     padding: 10px;
     text-transform: uppercase;
   }
+
+  button {
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
+    font-size: 18pt;
+    padding: 10px;
+    text-transform: uppercase;
+    border: 0;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+  }
 }
 
 .btn-outline-secondary:hover {
@@ -159,4 +172,20 @@ footer {
 
 .z-index-4 {
   z-index: 4;
+}
+
+input.form-control,
+textarea.form-control {
+  border-color: $crete;
+  border-radius: 0;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+textarea.form-control:active,
+textarea.form-control:focus,
+input.form-control:active,
+input.form-control:focus {
+  border-color: $crete;
 }
