--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -15,7 +15,7 @@ mark {
   height: 100%;
   width: 100%;
   z-index: 1;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 // .header-image-offset {
@@ -56,7 +56,7 @@ mark {
 .overflow-hidden {
   height: 100vh;
   overflow: hidden;
-  display:relative;
+  display: relative;
 }
 
 .pattern-overlay {
@@ -64,14 +64,14 @@ mark {
   top: 0;
   width: 100%;
   bottom: 0;
-  // background-image: url("../../img/video-pattern-overlay.png");
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%239C92AC' fill-opacity='0.5' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
 
 #homepage-video {
   width: 100%;
   height: 100vh;
   object-fit: cover;
-  left:0;
+  left: 0;
   top: 0;
 }
 
