--- a/assets/css/our-team.css
+++ b/assets/css/our-team.css
@@ -40,7 +40,10 @@ main {
 .header__title--regular {
   letter-spacing: 0.2rem;
   display: block;
-  padding-bottom: 2rem;
+}
+
+.header__text-box {
+  width: 50%;
 }
 
 .header__text-box--title {
@@ -48,6 +51,9 @@ main {
 }
 
 @media screen and (max-width: 659px) {
+  .header__text-box {
+    width: 100%;
+  }
   .orgchart {
     grid-auto-columns: 250px;
   }
@@ -57,24 +63,25 @@ main {
   .orgchart {
     grid-template: "left middle right";
   }
-  .orgchart > :first-child,
   .orgchart > :nth-child(2),
-  .orgchart > :nth-child(6),
+  .orgchart > :nth-child(3),
+  .orgchart > :nth-child(7),
   .orgchart #kindergarten3,
   .orgchart #year2class1,
   .orgchart #year3class2,
   .orgchart #year7class1 {
     grid-column: middle;
   }
-  .orgchart > :nth-child(3),
-  .orgchart > :nth-child(7),
+  .orgchart > :nth-child(4),
+  .orgchart > :nth-child(8),
   .orgchart #preschoolA1,
   .orgchart #year1class1,
   .orgchart #year4class1,
   .orgchart #year7class2 {
     grid-column: left;
   }
-  .orgchart .teaching-staff {
+  .orgchart .teaching-staff,
+  .orgchart .main-office {
     grid-column: span 3;
   }
 }
@@ -97,33 +104,44 @@ main {
   text-align: center;
 }
 
-.orgchart > :nth-child(n + 1):nth-child(-n + 9) .orgchart__textbox--name {
-  background: #003325;
+.orgchart > :nth-child(1) .main-office--title,
+.orgchart > :nth-child(n + 2):nth-child(-n + 10) .orgchart__textbox--name {
+  background-color: #c67503;
 }
 
-.orgchart > :nth-child(10) .teaching-staff--title,
-.orgchart > :nth-child(n + 11):nth-child(-n + 17) .orgchart__textbox--name {
-  background: #046429;
-}
-
-.orgchart > :nth-child(18) .teaching-staff--title,
-.orgchart > :nth-child(n + 19):nth-child(-n + 25) .orgchart__textbox--name {
+.orgchart > :nth-child(11) .teaching-staff--title,
+.orgchart > :nth-child(n + 12):nth-child(-n + 18) .orgchart__textbox--name {
   background: #048229;
 }
 
-.orgchart > :nth-child(26) .teaching-staff--title,
-.orgchart > :nth-child(n + 27):nth-child(-n + 33) .orgchart__textbox--name {
+.orgchart > :nth-child(19) .teaching-staff--title,
+.orgchart > :nth-child(n + 20):nth-child(-n + 26) .orgchart__textbox--name {
+  background: #046429;
+}
+
+.orgchart > :nth-child(27) .teaching-staff--title,
+.orgchart > :nth-child(n + 28):nth-child(-n + 34) .orgchart__textbox--name {
   background: #013859;
 }
 
-.orgchart > :nth-child(34) .teaching-staff--title,
-.orgchart > :nth-child(n + 35):nth-child(-n + 38) .orgchart__textbox--name {
+.orgchart > :nth-child(35) .teaching-staff--title,
+.orgchart > :nth-child(n + 36):nth-child(-n + 39) .orgchart__textbox--name {
   background: #02588c;
 }
 
-.orgchart > :nth-child(39) .teaching-staff--title,
-.orgchart > :nth-child(n + 40):nth-child(-n + 46) .orgchart__textbox--name {
+.orgchart > :nth-child(40) .teaching-staff--title,
+.orgchart > :nth-child(n + 41):nth-child(-n + 42) .orgchart__textbox--name {
   background: #0277bd;
+}
+
+.orgchart > :nth-child(43) .teaching-staff--title,
+.orgchart > :nth-child(n + 44):nth-child(-n + 50) .orgchart__textbox--name {
+  background: darkslateblue;
+}
+
+.orgchart > :nth-child(51) .teaching-staff--title,
+.orgchart > :nth-child(n + 52):nth-child(-n + 54) .orgchart__textbox--name {
+  background: #18123b;
 }
 
 .orgchart__textbox {
@@ -147,8 +165,9 @@ main {
   font-size: 1rem;
 }
 
-.teaching-staff--title {
-  margin-top: 10em;
+.teaching-staff--title,
+.main-office--title {
+  margin-top: 10vh;
   border: 2px solid darkslategray;
   font-size: 2rem;
   padding: 1rem;
