--- a/assets/scss/our-school.scss
+++ b/assets/scss/our-school.scss
@@ -1,4 +1,5 @@
 $crete: #477F2D;
+$grey: #DEE2E6;
 // $crete: rgba(71, 127, 45, 0.856);
 
 // body {
@@ -48,4 +49,38 @@ section {
   border-left: 5px solid $crete;
   padding-left: 5px;
   max-width: 80%
+}
+
+aside {
+  padding-top: 1rem;
+}
+
+aside ul {
+  padding-left: 0;
+}
+
+aside ul li {
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+aside a:link,
+aside a:visited {
+  color: black;
+}
+
+aside a:hover,
+aside a:active,
+aside a:focus {
+  color: $crete;
+  text-decoration: none;
+}
+
+.sticky-parent {
+  position: relative;
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
 }
