--- a/assets/scss/our-team.scss
+++ b/assets/scss/our-team.scss
@@ -180,3 +180,50 @@ main {
   word-spacing: 1rem;
   text-transform: uppercase;
 }
+
+aside {
+  margin-top: 10vh;
+  padding-top: 1rem;
+
+  ul {
+    padding:0;
+    margin:0;
+
+    li {
+      list-style: none;
+      font-size: 1.25rem;
+    }
+  }
+}
+
+aside a:link,
+aside a:visited {
+  color: white;
+}
+
+aside a:hover,
+aside a:active,
+aside a:focus {
+  color: black;
+  text-decoration: none;
+}
+
+.sticky-parent {
+  position: relative;
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    color: white;
+  }
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
+}
