--- a/assets/css/giving.css
+++ b/assets/css/giving.css
@@ -2,6 +2,10 @@ h1, h2, h3, h4, h5 {
   color: #477F2D;
 }
 
+.breadcrumb {
+  background: white;
+}
+
 .breadcrumb-item + .breadcrumb-item::before {
   content: ">";
 }
