--- a/assets/scss/giving.scss
+++ b/assets/scss/giving.scss
@@ -6,6 +6,10 @@ h1,h2,h3,h4,h5 {
 }
 
 // Breadcrumb
+.breadcrumb {
+  background: white;
+}
+
 .breadcrumb-item+.breadcrumb-item::before {
   content: $breadcrumb-divider;
 }
