--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -132,9 +132,10 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   }
 }
 
+
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, auto));
   grid-auto-rows: minmax(250px, 1fr);
   grid-auto-flow: dense;
   grid-gap: 5px;
