--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -41,27 +41,32 @@ footer {
   }
 }
 
+.btn {
+  padding: .2rem .5rem;
+}
+
 .fixed-navbar {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  position: absolute;
-  // padding: 20px 0;
+  padding: 20px 0;
   z-index: 2;
 
   .logo {
-    height: 100px;
+    width: 75px;
   }
 
   .logo-name {
     color: white;
-    font-size: 21pt;
+    font-size: 16pt;
     display: inline-block;
-    transform: translateY(40%);
-    width: 170px;
+    // transform: translateY(40%);
+    align-self: center;
+    width: 120px;
     margin-top: 0;
-    margin-left: 10px;
     line-height: 1;
+    margin-left: 10px;
+    margin-right: auto;
   }
 
   .navbar-link {
@@ -83,7 +88,6 @@ footer {
   color: white;
   text-align: center;
   padding-top: 5px;
-  padding-bottom: 5px;
   font-weight: bolder;
   // cursor: default;
 }
@@ -203,7 +207,8 @@ input.form-control:focus {
 
 // Honeypot
 #honeypot {
-  display: none; /*makes the field not visible to humans*/
+  display: none;
+  /*makes the field not visible to humans*/
 }
 
 .alert-danger.email-invalid {
@@ -213,4 +218,101 @@ input.form-control:focus {
 
 .email-invalid {
   color: red;
+}
+
+.mobile-margin-top {
+  margin-top: 5rem;
+  content: "";
+}
+
+// Hamburger Menu
+label {
+  .menu {
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 100;
+    width: 50px;
+    height: 50px;
+    background: #FFF;
+    border-radius: 50% 50% 50% 50%;
+    transition: .2s ease-in-out;
+    // box-shadow: 0 0 0 0 #FFF, 0 0 0 0 #FFF;
+    cursor: pointer;
+  }
+
+  .hamburger {
+    position: absolute;
+    top: 30px;
+    right: 20px;
+    width: 30px;
+    height: 3px;
+    background: $crete;
+    display: block;
+    transform-origin: center;
+    transition: .2s ease-in-out;
+
+    &:after,
+    &:before {
+      transition: .2s ease-in-out;
+      content: "";
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 100%;
+      background: $crete;
+    }
+
+    &:before {
+      top: -10px;
+    }
+
+    &:after {
+      bottom: -10px;
+    }
+  }
+
+  input {
+    display: none;
+  }
+
+  input:checked+.menu {
+    box-shadow: 0 0 0 100vw #FFF, 0 0 0 100vh #FFF;
+    border-radius: 0;
+
+    .hamburger {
+      transform: rotate(45deg);
+
+      &:after {
+        transform: rotate(90deg);
+        bottom: 0;
+      }
+
+      &:before {
+        transform: rotate(90deg);
+        top: 0;
+      }
+    }
+  }
+
+  input:checked+.menu+ul {
+    opacity: 1;
+  }
+
+  ul {
+    z-index: 200;
+    position: fixed;
+    top: 50vh;
+    left: 50vw;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: .25s 0s ease-in-out;
+  }
+
+  a {
+    margin-bottom: 1em;
+    display: block;
+    color: #000;
+    text-decoration: none;
+  }
 }
