--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -64,7 +64,7 @@ mark {
   top: 0;
   width: 100%;
   bottom: 0;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%239C92AC' fill-opacity='0.5' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%239C92AC' fill-opacity='0.5' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
 
 #homepage-video {
@@ -183,12 +183,22 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     height: calc(85%);
   }
 
-  > :nth-child(4) {
-    grid-row: span 2;
-  }
+  // > :nth-child(4) {
+  //   grid-row: span 2;
+  // }
 
-  > :last-child {
-    grid-column: span 2;
+  // > :last-child {
+  //   grid-column: span 2;
+  // }
+
+  @media only screen and (min-width: 576px) {
+    > :nth-child(4) {
+      grid-row: span 2;
+    }
+
+    > :last-child {
+      grid-column: span 2;
+    }
   }
 
   .card-event {
