--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -148,6 +148,7 @@ footer {
     display: flex;
     justify-content: space-around;
     color: white;
+    flex-wrap: wrap;
   }
 
   a {
@@ -311,8 +312,17 @@ label {
 
   a {
     margin-bottom: 1em;
-    display: block;
+    // display: block;
     color: #000;
-    text-decoration: none;
+    text-decoration: underline;
+  }
+}
+
+
+@media only screen and (max-width: 768px) {
+  .copyright-links {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
   }
 }
