added mobile navbar

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -326,3 +326,10 @@ label {
     flex-direction: column;
   }
 }
+
+a.navbar-brand {
+  font-size: .9rem;
+  img.navbar__logo {
+    width: 30px;
+  }
+}
