--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -45,6 +45,10 @@ footer {
   padding: .2rem .5rem;
 }
 
+.navbar-fixed-top {
+  z-index: 9999;
+}
+
 .fixed-navbar {
   display: flex;
   align-items: center;
@@ -157,6 +161,7 @@ footer {
     font-weight: bolder;
     font-size: 18pt;
     padding: 10px;
+    color: white;
     text-transform: uppercase;
   }
 
