--- a/assets/scss/events.scss
+++ b/assets/scss/events.scss
@@ -36,3 +36,19 @@ aside a:focus {
 }
 
 // End of Sticky sidebar
+
+.calendar {
+  position: relative;
+  overflow: hidden;
+  height: 60vw;
+  width: 100vw;
+  
+  iframe {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
+
+}
