--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -129,16 +129,14 @@ footer {
 }
 
 .btn-info {
+  &:hover {
+    background: white;
+    color: $crete;
+  }
   background: white;
   color: $crete;
   border: none;
   font-weight: bolder;
-
-}
-
-.btn-info:hover {
-  background: white;
-  color: $crete;
 }
 
 .three-links {
@@ -152,6 +150,10 @@ footer {
   }
 
   a {
+    &:hover {
+      color: inherit;
+    }
+    color: inherit;
     cursor: pointer;
     text-decoration: none;
     font-weight: bolder;
